--- a/frontEnd/ionic.config.json
+++ b/frontEnd/ionic.config.json
@@ -1,5 +1,7 @@
 {
-  "name": "weQuest",
-  "integrations": {},
+  "name": "ionic-react-conference-app",
+  "integrations": {
+    "capacitor": {}
+  },
   "type": "react"
 }
