--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -42,6 +42,7 @@
     "@capacitor/cli": "1.3.0",
     "@testing-library/react": "^9.3.1",
     "@types/googlemaps": "^3.38.0",
-    "typescript": "3.6.3"
+    "typescript": "3.6.3",
+    "gulp": "4.0.2"
   }
 }
