--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm run build && node build/server.js",
     "local": "./node_modules/.bin/nodemon -L --config \"./nodemon.json\"/",
-    "build": "rm -rf ./build/ && tsc",
+    "build": "find ./build -type f ! -wholename \"./build/public*\" -delete && tsc",
     "db:reset": "node bin/resetdb.js"
   },
   "keywords": [],
