--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "build/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsc && node build/server.js",
+    "start": "tsc && ./node_modules/.bin/nodemon -L build/server.js",
     "local": "./node_modules/.bin/nodemon -L  --watch build",
     "build": "rm -rf ./build/ && tsc",
     "db:reset": "node bin/resetdb.js"
