--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -43,7 +43,8 @@
   },
   "description": "An Ionic project",
   "devDependencies": {
-    "typescript": "3.6.3",
-    "gulp": "4.0.2"
+    "eslint": "^6.7.2",
+    "gulp": "4.0.2",
+    "typescript": "3.6.3"
   }
 }
