--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/pg": "^7.11.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "pg": "^7.15.1",
