--- a/server/package.json
+++ b/server/package.json
@@ -14,16 +14,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/pg": "^7.11.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "pg": "^7.15.1",
     "pg-native": "^3.0.0"
   },
   "devDependencies": {
+    "@types/express-session": "^1.15.16",
     "@types/express": "^4.17.2",
     "@types/morgan": "^1.7.37",
     "@types/node": "^12.12.21",
+    "@types/pg": "^7.11.2",
     "morgan": "^1.9.1",
     "nodemon": "^2.0.2",
     "ts-node": "^8.5.4",
