--- a/server/package.json
+++ b/server/package.json
@@ -14,12 +14,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.7",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "pg": "^7.15.1",
     "pg-native": "^3.0.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/express-session": "^1.15.16",
     "@types/express": "^4.17.2",
     "@types/morgan": "^1.7.37",
