--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -18,7 +18,8 @@
     "react-router": "^5.1.0",
     "react-router-dom": "^5.1.0",
     "react-scripts": "3.2.0",
-    "typescript": "3.6.3"
+    "typescript": "3.6.3",
+    "axios": "^0.19.0"
   },
   "scripts": {
     "start": "concurrently \"PORT=3003 react-scripts start\" \"gulp build\" \"gulp watch\"",
