--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^3.0.7",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "pg": "^7.15.1",
@@ -27,6 +28,7 @@
     "@types/morgan": "^1.7.37",
     "@types/node": "^12.12.21",
     "@types/pg": "^7.11.2",
+    "@types/cors": "^2.8.6",
     "morgan": "^1.9.1",
     "nodemon": "^2.0.2",
     "ts-node": "^8.5.4",
