--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -1,8 +1,12 @@
 {
   "name": "wequest-front-end",
   "version": "0.0.1",
+  "proxy": "http://localhost:8080",
   "private": true,
   "dependencies": {
+    "@capacitor/android": "^1.4.0",
+    "@capacitor/core": "^1.4.0",
+    "@capacitor/ios": "^1.4.0",
     "@ionic/react": "^4.11.0",
     "@ionic/react-router": "^4.11.0",
     "@types/jest": "^24.0.18",
@@ -11,6 +15,7 @@
     "@types/react-dom": "^16.9.1",
     "@types/react-router": "^5.1.1",
     "@types/react-router-dom": "^5.1.0",
+    "axios": "^0.19.0",
     "ionicons": "^4.6.3",
     "node-sass": "^4.13.0",
     "react": "^16.10.2",
@@ -18,8 +23,7 @@
     "react-router": "^5.1.0",
     "react-router-dom": "^5.1.0",
     "react-scripts": "3.2.0",
-    "typescript": "3.6.3",
-    "axios": "^0.19.0"
+    "typescript": "3.6.3"
   },
   "scripts": {
     "start": "concurrently \"PORT=3003 react-scripts start\" \"gulp build\" \"gulp watch\"",
@@ -44,8 +48,9 @@
   },
   "description": "An Ionic project",
   "devDependencies": {
-    "eslint": "^6.7.2",
+    "@capacitor/cli": "^1.4.0",
     "concurrently": "^5.0.2",
+    "eslint": "^6.7.2",
     "gulp": "4.0.2",
     "typescript": "3.6.3"
   }
