--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -9,6 +9,7 @@
     "@capacitor/ios": "^1.4.0",
     "@ionic/react": "^4.11.0",
     "@ionic/react-router": "^4.11.0",
+    "@rdlabo/capacitor-facebook-login": "^1.1.2",
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.12",
     "@types/react": "^16.9.5",
