--- a/server/package.json
+++ b/server/package.json
@@ -14,8 +14,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.597.0",
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "file-type": "^12.4.2",
     "pg": "^7.15.1",
     "pg-native": "^3.0.0"
   },
