--- a/server/package.json
+++ b/server/package.json
@@ -14,12 +14,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/pg": "^7.14.1",
     "aws-sdk": "^2.597.0",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "file-type": "^12.4.2",
-    "pg": "^7.15.1",
+    "pg": "^7.17.0",
     "pg-native": "^3.0.0"
   },
   "devDependencies": {
