--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "@types/pg": "^7.14.1",
     "aws-sdk": "^2.597.0",
     "body-parser": "^1.19.0",
+    "camelcase-keys": "^6.1.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "file-type": "^12.4.2",
