--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -9,7 +9,6 @@
     "@capacitor/ios": "^1.4.0",
     "@ionic/react": "^4.11.0",
     "@ionic/react-router": "^4.11.0",
-    "@rdlabo/capacitor-facebook-login": "^1.1.2",
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.12",
     "@types/react": "^16.9.5",
@@ -21,13 +20,15 @@
     "node-sass": "^4.13.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.0.7",
     "react-router": "^5.1.0",
     "react-router-dom": "^5.1.0",
     "react-scripts": "3.2.0",
     "typescript": "3.6.3"
   },
   "scripts": {
-    "start": "concurrently \"PORT=3003 react-scripts start\" \"gulp build\" \"gulp watch\"",
+    "start": "concurrently \"HTTPS=true PORT=3003 react-scripts start\" \"gulp build\" \"gulp watch\"",
     "build": "react-scripts build && gulp build && npx cap copy",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
