--- a/server/package.json
+++ b/server/package.json
@@ -14,11 +14,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcrypt": "^3.0.0",
+    "@types/cookie-session": "^2.0.37",
     "@types/express-session": "^1.15.16",
     "@types/pg": "^7.14.1",
     "aws-sdk": "^2.597.0",
+    "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
     "camelcase-keys": "^6.1.1",
+    "cookie-session": "^1.3.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
