--- a/server/package.json
+++ b/server/package.json
@@ -14,25 +14,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cookie-session": "^2.0.37",
     "@types/cors": "^2.8.6",
-    "bcrypt": "^3.0.7",
-    "cors": "^2.8.5",
-    "@types/express-session": "^1.15.16",
     "@types/pg": "^7.14.1",
     "aws-sdk": "^2.597.0",
+    "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
     "camelcase-keys": "^6.1.1",
     "cookie-session": "^1.3.3",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-session": "^1.17.0",
     "file-type": "^12.4.2",
     "pg": "^7.17.0",
     "pg-native": "^3.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
-    "@types/express-session": "^1.15.16",
     "@types/express": "^4.17.2",
     "@types/morgan": "^1.7.37",
     "@types/node": "^12.12.21",
