--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,7 @@
     "@types/cors": "^2.8.6",
     "@types/pg": "^7.14.1",
     "aws-sdk": "^2.597.0",
-    "bcrypt": "^3.0.7",
+    "bcrypt": "3.0.7",
     "body-parser": "^1.19.0",
     "camelcase-keys": "^6.1.1",
     "cookie-session": "^1.3.3",
