--- a/server/package.json
+++ b/server/package.json
@@ -14,20 +14,24 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cookie-parser": "^1.4.2",
     "@types/cookie-session": "^2.0.37",
     "@types/cors": "^2.8.6",
     "@types/pg": "^7.14.1",
+    "@types/socket.io": "^2.1.4",
     "aws-sdk": "^2.597.0",
     "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
     "camelcase-keys": "^6.1.1",
+    "cookie-parser": "^1.4.4",
     "cookie-session": "^1.3.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "file-type": "^12.4.2",
     "pg": "^7.17.0",
-    "pg-native": "^3.0.0"
+    "pg-native": "^3.0.0",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
