--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -26,6 +26,7 @@
     "react-router": "^5.1.0",
     "react-router-dom": "^5.1.0",
     "react-scripts": "3.2.0",
+    "react-simple-animate": "^3.3.5",
     "socket.io-client": "^2.3.0",
     "typescript": "3.6.3"
   },
