--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -4,9 +4,7 @@
   "proxy": "http://localhost:8080",
   "private": true,
   "dependencies": {
-    "@capacitor/android": "^1.4.0",
     "@capacitor/core": "^1.4.0",
-    "@capacitor/ios": "^1.4.0",
     "@ionic/react": "^4.11.0",
     "@ionic/react-router": "^4.11.0",
     "@types/jest": "^24.0.18",
@@ -26,7 +24,7 @@
     "react-router": "^5.1.0",
     "react-router-dom": "^5.1.0",
     "react-scripts": "3.2.0",
-    "react-simple-animate": "^3.3.5",
+    "react-transition-group": "^4.3.0",
     "socket.io-client": "^2.3.0",
     "typescript": "3.6.3"
   },
