--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.24.0",
     "node-sass": "^4.13.0",
     "react": "^16.10.2",
+    "react-animated-text": "^0.1.4",
     "react-dom": "^16.10.2",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.0.7",
